--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fp-ts": "^2.8.5",
     "lodash": "^4.17.20",
     "node-schedule": "^1.3.2",
+    "pg": "^8.5.1",
     "rxjs": "^6.6.3",
     "rxjs-ratelimiter": "^1.0.1",
     "typeorm": "^0.2.29",
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "chai": "^4.2.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
