--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.5.1",
     "rxjs": "^6.6.3",
     "rxjs-ratelimiter": "^1.0.1",
+    "serialize-error": "^7.0.1",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.1",
     "verror": "^1.10.0"
