--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "format:package-json": "sort-package-json ./package.json",
     "format:prettier": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint": "eslint --ext ts,tsx src",
-    "specs": "mocha --exit --require ts-node/register/transpile-only './src/**/*.spec.ts'"
+    "specs": "env $(cat .env | grep -v \"#\" | xargs) mocha --exit --require ts-node/register/transpile-only './src/**/*.spec.ts'"
   },
   "dependencies": {
     "@figedi/svc": "^0.6.9",
+    "backoff-rxjs": "^6.5.7",
     "fp-ts": "^2.8.5",
     "lodash": "^4.17.20",
     "node-schedule": "^1.3.2",
