chore: updates deps

--- a/package.json
+++ b/package.json
@@ -13,48 +13,47 @@
     "format:package-json": "sort-package-json ./package.json",
     "format:prettier": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint": "eslint --ext ts,tsx src",
-    "specs": "env $(cat .env | grep -v \"#\" | xargs) mocha --exit --require ts-node/register/transpile-only './src/**/*.spec.ts'",
-    "specs:debug": "env $(cat .env | grep -v \"#\" | xargs) NODE_OPTIONS=--inspect-brk mocha --exit --require ts-node/register/transpile-only './src/**/*.spec.ts'"
+    "specs": "./scripts/test"
   },
   "dependencies": {
-    "@figedi/svc": "^0.6.9",
+    "@figedi/svc": "^0.6.19",
     "backoff-rxjs": "^6.5.7",
-    "fp-ts": "^2.8.5",
-    "lodash": "^4.17.20",
-    "node-schedule": "^1.3.2",
-    "pg": "^8.5.1",
+    "fp-ts": "^2.11.9",
+    "lodash": "^4.17.21",
+    "node-schedule": "^2.1.0",
+    "pg": "^8.7.3",
     "rxjs": "^6.6.3",
     "rxjs-ratelimiter": "^1.0.1",
     "serialize-error": "^7.0.1",
-    "typeorm": "^0.2.29",
-    "uuid": "^8.3.1",
+    "typeorm": "^0.3.4",
+    "uuid": "^8.3.2",
     "verror": "^1.10.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.0.3",
-    "@types/node-schedule": "^1.3.1",
-    "@types/sinon": "^9.0.8",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "chai": "^4.2.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node-schedule": "^1.3.2",
+    "@types/sinon": "^10.0.11",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "mocha": "^8.2.1",
+    "mocha": "^9.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "sinon": "^9.2.1",
-    "sort-package-json": "^1.46.1",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "prettier": "^2.6.1",
+    "sinon": "^13.0.1",
+    "sort-package-json": "^1.55.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
