--- a/.eslintrc
+++ b/.eslintrc
@@ -12,11 +12,9 @@
   },
   "extends": [
     "airbnb-typescript/base",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["import"],
   "rules": {
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-non-null-assertion": 0,
