--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "author": "Felix Kaminski",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsup",
     "format": "run-s format:imports format:package-json format:prettier format:eslint",
     "format:eslint": "eslint --cache --ext .ts,.tsx --fix ./ >/dev/null 2>&1 || true",
     "format:imports": "import-sort --write '**/*.{js,jsx,ts,tsx}'",
@@ -16,44 +17,45 @@
     "specs": "./scripts/test"
   },
   "dependencies": {
-    "@figedi/svc": "^0.6.19",
-    "backoff-rxjs": "^6.5.7",
+    "@figedi/svc": "0.17.3",
+    "backoff-rxjs": "^7.0.0",
     "fp-ts": "^2.11.9",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "node-schedule": "^2.1.0",
     "pg": "^8.7.3",
-    "rxjs": "^6.6.3",
-    "rxjs-ratelimiter": "^1.0.1",
-    "serialize-error": "^7.0.1",
+    "rxjs": "^7.8.1",
+    "serialize-error": "^11.0.2",
     "typeorm": "^0.3.4",
-    "uuid": "^8.3.2",
-    "verror": "^1.10.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "tsup": "^7.2.0",
+    "pino": "^8.15.0",
     "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node-schedule": "^1.3.2",
+    "@types/mocha": "^10.0.1",
+    "@types/node-schedule": "^2.1.0",
     "@types/sinon": "^10.0.11",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@types/uuid": "^9.0.3",
+    "@types/lodash-es": "^4.17.9",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "chai": "^4.3.6",
     "env-cmd": "^10.1.0",
     "eslint": "^8.12.0",
-    "eslint-config-airbnb-typescript": "^16.1.4",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "mocha": "^9.2.2",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.1",
-    "sinon": "^13.0.1",
-    "sort-package-json": "^1.55.0",
+    "prettier": "^3.0.3",
+    "sinon": "^15.2.0",
+    "sort-package-json": "^2.5.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^5.2.2"
   }
 }
