--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,36 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2021",
+    "target": "esnext",
     "rootDir": "./src",
-    "baseUrl": ".",
     "sourceRoot": "./src",
     "outDir": "./dist",
-    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "sourceMap": true,
     "declaration": true,
     "noImplicitAny": true,
     "removeComments": true,
-    "skipLibCheck": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "forceConsistentCasingInFileNames": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importsNotUsedAsValues": "remove",
-    "pretty": true,
-    "paths": {
-      "*": [
-          "node_modules/*",
-          "types/*"
-      ]
-    },
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types",
+    ],
     "lib": [
-      "es2021",
-      "dom"
+      "esnext"
     ]
   },
-  "include": ["./src"
-  ],
   "exclude": [
-   "importsort.config.js", 
-    "node_modules"
+    ".*",
+    "_*",
+    "dist",
+    "node_modules",
+    "tsup.config.ts"
   ]
 }
