--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
 NODE_ENV=development
 SHOULD_LOG=false
-PG_USER_NAME=postgres
-PG_PASSWORD=postgres
-PG_HOST=localhost
-PG_DB=postgres
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
