--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -52,6 +52,8 @@ jobs:
       
       - name: Run specs
         run: npm run specs
+        env: 
+          DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
