--- a/package.json
+++ b/package.json
@@ -21,31 +21,27 @@
     "format:package-json": "sort-package-json ./package.json",
     "format:prettier": "prettier --write 'src/**/*.{ts,tsx}'",
     "lint": "eslint --ext ts,tsx src",
-    "specs": "./scripts/test"
+    "specs": "vitest run",
+    "specs:watch": "vitest"
   },
   "dependencies": {
-    "@figedi/svc": "0.17.3",
     "backoff-rxjs": "^7.0.0",
-    "fp-ts": "^2.11.9",
-    "lodash-es": "^4.17.21",
-    "node-schedule": "^2.1.0",
-    "pg": "^8.7.3",
-    "rxjs": "^7.8.1",
-    "serialize-error": "^11.0.2",
-    "uuid": "^9.0.0",
-    "zapatos": "^6.1.4"
+    "fp-ts": "^2.16.11",
+    "lodash-es": "^4.17.22",
+    "node-schedule": "^2.1.1",
+    "pg": "^8.16.3",
+    "rate-limiter-flexible": "^9.0.1",
+    "rxjs": "^7.8.2",
+    "serialize-error": "^12.0.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.0",
-    "@types/lodash-es": "^4.17.9",
-    "@types/mocha": "^10.0.1",
-    "@types/node-schedule": "^2.1.0",
-    "@types/sinon": "^10.0.11",
-    "@types/uuid": "^9.0.3",
+    "@electric-sql/pglite": "^0.3.14",
+    "@types/lodash-es": "^4.17.12",
+    "@types/pg": "^8.16.0",
+    "@types/node-schedule": "^2.1.8",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "chai": "^4.3.6",
-    "env-cmd": "^10.1.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
@@ -55,14 +51,12 @@
     "import-sort-parser-babylon": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
-    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "pino": "^8.15.0",
-    "prettier": "^3.0.3",
-    "sinon": "^15.2.0",
+    "pino": "^10.1.0",
+    "prettier": "^3.7.4",
     "sort-package-json": "^2.5.1",
-    "ts-node": "^10.7.0",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16"
   }
 }
