--- a/package.json
+++ b/package.json
@@ -15,49 +15,37 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rm -rf ./dist && tsup",
-    "format": "run-s format:imports format:package-json format:prettier format:eslint",
-    "format:eslint": "eslint --cache --ext .ts,.tsx --fix ./ >/dev/null 2>&1 || true",
-    "format:imports": "import-sort --write '**/*.{js,jsx,ts,tsx}'",
+    "format": "run-s format:package-json format:lint",
+    "format:lint": "biome check --fix",
     "format:package-json": "sort-package-json ./package.json",
-    "format:prettier": "prettier --write 'src/**/*.{ts,tsx}'",
-    "lint": "eslint --ext ts,tsx src",
+    "lint": "biome check",
     "specs": "vitest run",
     "specs:watch": "vitest"
   },
   "dependencies": {
     "fp-ts": "^2.16.11",
-    "kysely": "^0.28.9",
-    "lodash-es": "^4.17.22",
+    "kysely": "^0.28.10",
+    "lodash-es": "^4.17.23",
     "node-schedule": "^2.1.1",
-    "pg": "^8.16.3",
+    "pg": "^8.18.0",
     "rate-limiter-flexible": "^9.0.1",
     "rxjs": "^7.8.2",
-    "serialize-error": "^12.0.0",
+    "serialize-error": "^13.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@electric-sql/pglite": "^0.3.14",
-    "kysely-pglite-dialect": "^1.2.0",
+    "@biomejs/biome": "2.3.13",
+    "@electric-sql/pglite": "^0.3.15",
     "@types/lodash-es": "^4.17.12",
-    "@types/pg": "^8.16.0",
     "@types/node-schedule": "^2.1.8",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "eslint": "^8.12.0",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^5.0.0",
-    "import-sort-cli": "^6.0.0",
-    "import-sort-parser-babylon": "^6.0.0",
-    "import-sort-parser-typescript": "^6.0.0",
-    "import-sort-style-module": "^6.0.0",
+    "@types/pg": "^8.16.0",
+    "kysely-pglite-dialect": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "pino": "^10.1.0",
-    "prettier": "^3.7.4",
-    "sort-package-json": "^2.5.1",
-    "tsup": "^8.5.1",
+    "pino": "^10.3.0",
+    "prettier": "^3.8.1",
+    "sort-package-json": "^3.6.1",
+    "tsdown": "^0.20.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
+    "vitest": "^4.0.18"
   }
 }
