--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,33 +4,24 @@ on:
   push:
     branches:
       - "master"
+
+
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15.1-alpine
-        ports: 
-          - 5432:5432
-        env:
-          POSTGRES_DB: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          PG_HOST: localhost
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     permissions: write-all
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v6
 
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v6
         with:
-          node-version: "18.x"
+          node-version: "24.13.0"
 
       - name: Setup GitHub user
         run: |
@@ -48,11 +39,10 @@ jobs:
       
       - name: Run specs
         run: npm run specs
-        env: 
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
 
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v3
+        uses: cycjimmy/semantic-release-action@v6
+        with: 
+          semantic_version: 25.0.3 # supports npm trusted publishing
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
