--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "author": "Felix Kaminski",
   "type": "module",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
-    }
+    "types": "./dist/index.d.mts",
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.mjs"
   },
-  "main": "dist/index.cjs",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "scripts": {
-    "build": "rm -rf ./dist && tsup",
+    "build": "rm -rf ./dist && tsdown",
     "format": "run-s format:package-json format:lint",
     "format:lint": "biome check --fix",
     "format:package-json": "sort-package-json ./package.json",
