--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,13 +7,16 @@ on:
 
 
 permissions:
-  id-token: write  # Required for OIDC
-  contents: read
+  contents: read # for checkout
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for trusted publishing and npm provenance
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -30,6 +33,9 @@ jobs:
 
       - name: Install deps
         run: npm ci
+
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
       
       - name: Build
         run: npm run build
