--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "require": "./dist/index.cjs",
     "import": "./dist/index.mjs"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/figedi/cqrs.git"
+  },
   "main": "dist/index.mjs",
   "types": "./dist/index.d.mts",
   "scripts": {
